--- a/package.json
+++ b/package.json
@@ -1,10 +1,15 @@
 {
   "name": "language-pdl2",
-  "version": "0.0.0",
+  "version": "0.0.1",
   "description": "Support for PDL2 language in Atom",
   "keywords": [
     "language",
-    "grammar"
+    "grammar",
+    "PDL",
+    "PDL2",
+    "Comau",
+    "Robot",
+    "Robots"
   ],
   "repository": "https://github.com/nixung/language-pdl2",
   "license": "MIT",
